--- a/src/SFA.Apprenticeships.Application.Application/SFA.Apprenticeships.Application.Application.csproj
+++ b/src/SFA.Apprenticeships.Application.Application/SFA.Apprenticeships.Application.Application.csproj
@@ -85,6 +85,11 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Strategies\Traineeships\GetApplicationForReviewStrategy.cs" />
+    <Compile Include="Strategies\Traineeships\IGetApplicationForReviewStrategy.cs" />
+    <Compile Include="Strategies\Traineeships\IUpdateApplicationNotesStrategy.cs" />
+    <Compile Include="Strategies\Traineeships\UpdateApplicationNotesStrategy.cs" />
+    <Compile Include="TraineeshipApplicationService.cs" />
     <Compile Include="ApprenticeshipApplicationService.cs" />
     <Compile Include="IoC\ApplicationServicesRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -111,9 +116,7 @@
       <Name>SFA.Apprenticeships.Domain.Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Strategies\Traineeships\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
