--- a/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Applications\Processes\ApplicationStatusAlertStrategyBuilder.cs" />
     <Compile Include="Applications\Processes\ApplicationStatusAlertStrategyTests.cs" />
     <Compile Include="Applications\ApplicationStatusProcessorTests.cs" />
+    <Compile Include="Application\ApprenticeshipApplicationServiceTests.cs" />
     <Compile Include="Builders\ApplicationStatusSummaryBuilder.cs" />
     <Compile Include="Builders\ApprenticeshipSearchResultsBuilder.cs" />
     <Compile Include="Candidates\Configuration\HousekeepingConfigurationBuilder.cs" />
