--- a/src/SFA.Apprenticeships.Infrastructure.Migrate/App.Pre.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Migrate/App.Pre.config
@@ -4,9 +4,9 @@
     <variable name="environment" value="PRE" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
     <targets async="true" xdt:Transform="Replace">
       <target xsi:type="FallbackGroup" name="fallbacklogger" returnToFirstOnSuccess="true">
-        <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Infrastructure.LogEventIndexer.{0}" AppId="SFA.Apprenticeships.Infrastructure.LogEventIndexer">
+        <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Infrastructure.Migrate.{0}" AppId="SFA.Apprenticeships.Infrastructure.Migrate">
           <layout xsi:type="JsonLayout">
-            <property name="application" layout="SFA.Apprenticeships.Infrastructure.LogEventIndexer" />
+            <property name="application" layout="SFA.Apprenticeships.Infrastructure.Migrate" />
             <property name="environment" layout="${environment}" />
             <property name="version" layout="${gdc:item=version}" />
             <property name="date" layout="${longdate}" />
@@ -26,7 +26,7 @@
       </target>
     </targets>
     <rules xdt:Transform="Replace">
-      <logger name="*" minlevel="Info" writeTo="fallbacklogger" />
+      <logger name="*" minlevel="Debug" writeTo="fallbacklogger" />
     </rules>
   </nlog>
 </configuration>
