--- a/src/SFA.Apprenticeships.Infrastructure.UnitTests/SFA.Apprenticeships.Infrastructure.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.UnitTests/SFA.Apprenticeships.Infrastructure.UnitTests.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Processes\VacancyStatusSummarySubscriberTests.cs" />
     <Compile Include="Processes\VacancySummaryCompleteSubscriberTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Raa\Extensions\VacancyExtensionsTests.cs" />
     <Compile Include="ScheduledJobs\Application\ApplicationStatusSummarySubscriberTests.cs" />
     <Compile Include="ScheduledJobs\Vacancy\ApprenticeshipSummaryUpdateProcessorTests.cs" />
     <Compile Include="ScheduledJobs\Vacancy\VacancyStatusControlQueueConsumerTests..cs" />
@@ -301,6 +302,10 @@
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Processes\SFA.Apprenticeships.Infrastructure.Processes.csproj">
       <Project>{D1BC4A28-A7AB-475E-B73E-5564897550BA}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Processes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Raa\SFA.Apprenticeships.Infrastructure.Raa.csproj">
+      <Project>{1f4776f3-884b-4b00-ba97-22bfa06c034e}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Raa</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.ScheduledJobs\SFA.Apprenticeships.Infrastructure.ScheduledJobs.csproj">
       <Project>{0491054E-CAF4-4321-BE1D-3E44E739421C}</Project>
