Created and used VacancySummary object to speed up dashboard queries

--- a/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
@@ -106,11 +106,13 @@
     <Compile Include="Vacancies\ApprenticeshipLevel.cs" />
     <Compile Include="Vacancies\Duration.cs" />
     <Compile Include="Vacancies\DurationType.cs" />
+    <Compile Include="Vacancies\VacancyLocationType.cs" />
     <Compile Include="Vacancies\VacancyStatus.cs" />
     <Compile Include="Vacancies\Sector.cs" />
     <Compile Include="Vacancies\Standard.cs" />
     <Compile Include="Vacancies\TrainingType.cs" />
     <Compile Include="Vacancies\Vacancy.cs" />
+    <Compile Include="Vacancies\VacancySummary.cs" />
     <Compile Include="Vacancies\VacancyType.cs" />
     <Compile Include="Vacancies\Wage.cs" />
     <Compile Include="Vacancies\WageType.cs" />
