--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj
@@ -174,10 +174,10 @@
     <Compile Include="Vacancies\Entities\MongoVacancyLocation.cs" />
     <Compile Include="Vacancies\VacancyLocationRepository.cs" />
     <Compile Include="Vacancies\VacancyRepository.cs" />
-    <Compile Include="Vacancies\Entities\MongoApprenticeshipVacancy.cs" />
+    <Compile Include="Vacancies\Entities\MongoVacancy.cs" />
     <Compile Include="Vacancies\Entities\MongoReferenceNumber.cs" />
     <Compile Include="Vacancies\IoC\VacancyRepositoryRegistry.cs" />
-    <Compile Include="Vacancies\Mappers\ApprenticeshipVacancyMappers.cs" />
+    <Compile Include="Vacancies\Mappers\VacancyMappers.cs" />
     <Compile Include="Vacancies\ReferenceNumberRepository.cs" />
   </ItemGroup>
   <ItemGroup>
