--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Schemas\Vacancy\Entities\VacancyHistory.cs" />
     <Compile Include="Schemas\UserProfile\AgencyUserMappers.cs" />
     <Compile Include="Schemas\UserProfile\Entities\AgencyUser.cs" />
+    <Compile Include="Schemas\Vacancy\IoC\VacancyRepositoryRegistry.cs" />
     <Compile Include="Schemas\Vacancy\ReferralCommentCodeName.cs" />
     <Compile Include="Schemas\Vacancy\TextFieldCodeName.cs" />
     <Compile Include="Schemas\Vacancy\VacancyLocationRepository.cs" />
