--- a/src/SFA.Apprenticeships.Infrastructure.Migrate/App.Pre.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Migrate/App.Pre.config
@@ -2,7 +2,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns:nlog="http://www.nlog-project.org/schemas/NLog.xsd">
   <nlog throwExceptions="true" autoReload="true" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <variable name="environment" value="PRE" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
-    <targets async="true" xdt:Transform="Replace">
+    <!--<targets async="true" xdt:Transform="Replace">
       <target xsi:type="FallbackGroup" name="fallbacklogger" returnToFirstOnSuccess="true">
         <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Infrastructure.Migrate.{0}" AppId="SFA.Apprenticeships.Infrastructure.Migrate">
           <layout xsi:type="JsonLayout">
@@ -24,7 +24,7 @@
           </layout>
         </target>
       </target>
-    </targets>
+    </targets>-->
     <rules xdt:Transform="Replace">
       <logger name="*" minlevel="Debug" writeTo="fallbacklogger" />
     </rules>
