--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.UnitTests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.UnitTests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.UnitTests.csproj
@@ -55,9 +55,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Employer\EmployerMappersTests.cs" />
     <Compile Include="Provider\ProviderMappersTests.cs" />
     <Compile Include="Provider\ProviderSiteMappersTests.cs" />
     <Compile Include="Provider\ProviderUserMappersTests.cs" />
+    <Compile Include="VacancyParty\VacancyPartyMappersTests.cs" />
     <Compile Include="Vacancy\ApprenticeshipVacancyLocationMappersUnitTests.cs" />
     <Compile Include="Vacancy\ApprenticeshipVacancyMappersUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
