--- a/src/SFA.Apprenticeships.Web.Candidate.AcceptanceTests/SFA.Apprenticeships.Web.Candidate.AcceptanceTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Candidate.AcceptanceTests/SFA.Apprenticeships.Web.Candidate.AcceptanceTests.csproj
@@ -108,13 +108,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="SpecBind, Version=1.5.3.193, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\SpecBind.1.5.3.193\lib\net45\SpecBind.dll</HintPath>
+    <Reference Include="SpecBind, Version=1.6.2.232, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SpecBind.1.6.2.232\lib\net45\SpecBind.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SpecBind.Selenium, Version=1.5.3.193, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\SpecBind.Selenium.1.5.3.193\lib\net45\SpecBind.Selenium.dll</HintPath>
+    <Reference Include="SpecBind.Selenium, Version=1.6.2.232, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SpecBind.Selenium.1.6.2.232\lib\net45\SpecBind.Selenium.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="StructureMap, Version=3.1.6.186, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -137,13 +137,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\SpecFlow.1.9.0\lib\net35\TechTalk.SpecFlow.dll</HintPath>
     </Reference>
-    <Reference Include="WebDriver, Version=2.47.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Selenium.WebDriver.2.47.0\lib\net40\WebDriver.dll</HintPath>
+    <Reference Include="WebDriver, Version=2.52.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.WebDriver.2.52.0\lib\net40\WebDriver.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="WebDriver.Support, Version=2.47.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Selenium.Support.2.47.0\lib\net40\WebDriver.Support.dll</HintPath>
+    <Reference Include="WebDriver.Support, Version=2.52.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.Support.2.52.0\lib\net40\WebDriver.Support.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <Choose>
