Pre logging config was incorrect

--- a/src/SFA.Apprenticeships.Infrastructure.Migrate/App.Pre.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Migrate/App.Pre.config
@@ -24,9 +24,9 @@
           </layout>
         </target>
       </target>
-    </targets>-->
+    </targets>
     <rules xdt:Transform="Replace">
       <logger name="*" minlevel="Debug" writeTo="fallbacklogger" />
-    </rules>
+    </rules>-->
   </nlog>
 </configuration>
