--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Schemas\dbo\Employer\EmployerRepositoryTests.cs" />
     <Compile Include="Schemas\dbo\ProviderSite\ProviderSiteRepositoryTests.cs" />
     <Compile Include="Schemas\dbo\Provider\ProviderRepositoryTests.cs" />
+    <Compile Include="Schemas\dbo\VacancyParty\VacancyPartyRepositoryTests.cs" />
     <Compile Include="Schemas\Provider\ProviderUserRepositoryTests.cs" />
     <Compile Include="Schemas\Reference\ReferenceRepositoryTests.cs" />
     <Compile Include="Schemas\UserProfile\AgencyUserRepositoryTests.cs" />
