--- a/src/SFA.Apprenticeships.Application.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Application.UnitTests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoFixture" version="3.31.3" targetFramework="net451" />
+  <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="FluentAssertions" version="3.5.0" targetFramework="net451" />
   <package id="Moq" version="4.2.1507.0118" targetFramework="net451" />
   <package id="NBuilder" version="3.0.1.1" targetFramework="net451" />
