Check if the vacancy is available to QA before approving it

--- a/src/SFA.Apprenticeships.Infrastructure.Common/SFA.Apprenticeships.Infrastructure.Common.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Common/SFA.Apprenticeships.Infrastructure.Common.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Configuration\ConfigurationService.cs" />
     <Compile Include="Configuration\ServicesConfiguration.cs" />
     <Compile Include="Configuration\SecureConfigurationSection.cs" />
+    <Compile Include="CurrentUser\ICurrentUserService.cs" />
     <Compile Include="IoC\CommonRegistry.cs" />
     <Compile Include="Mappers\MapperEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
