--- a/src/SFA.Apprenticeships.Web.Common/packages.config
+++ b/src/SFA.Apprenticeships.Web.Common/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="CuttingEdge.Conditions" version="1.2.0.0" targetFramework="net451" />
   <package id="FluentValidation" version="5.6.2.0" targetFramework="net451" />
   <package id="FluentValidation.MVC5" version="5.6.2.0" targetFramework="net451" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
