--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -1,141 +1,145 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
   <appSettings>
-    <add key="webpages:Version" value="3.0.0.0"/>
-    <add key="webpages:Enabled" value="false"/>
-    <add key="ClientValidationEnabled" value="true"/>
-    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="ConfigurationPath" value="Configs\settings.config"/>
-    <add key="Environment" value="Debug"/>
-    <add key="ida:MetadataAddress" value="https://nasprodacs.accesscontrol.windows.net/FederationMetadata/2007-06/FederationMetadata.xml"/>
-    <add key="ida:Wtrealm" value="https://recruit.findapprenticeship.service.gov.uk/"/>
-    <add key="ida:SessionTimeout" value="60"/>
-    <add key="CdnUrl" value="//az693499.vo.msecnd.net"/>
+    <add key="webpages:Version" value="3.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ConfigurationPath" value="Configs\settings.config" />
+    <add key="Environment" value="Debug" />
+    <add key="ida:MetadataAddress" value="https://nasprodacs.accesscontrol.windows.net/FederationMetadata/2007-06/FederationMetadata.xml" />
+    <add key="ida:Wtrealm" value="https://recruit.findapprenticeship.service.gov.uk/" />
+    <add key="ida:SessionTimeout" value="60" />
+    <add key="CdnUrl" value="//az693499.vo.msecnd.net" />
   </appSettings>
   <system.web>
-    <authentication mode="None"/>
-    <compilation debug="true" targetFramework="4.5.1"/>
-    <httpRuntime targetFramework="4.5.1"/>
-    <httpCookies httpOnlyCookies="true" requireSSL="false"/>
+    <authentication mode="None" />
+    <compilation debug="true" targetFramework="4.5.1" />
+    <httpRuntime targetFramework="4.5.1" />
+    <httpCookies httpOnlyCookies="true" requireSSL="false" />
     <caching>
-      <outputCache/>
+      <outputCache />
       <outputCacheSettings>
         <outputCacheProfiles>
-          <add name="Long" duration="3600" varyByParam="none"/>
-          <add name="Short" duration="10" varyByParam="none"/>
-          <add name="Data" duration="600" varyByParam="none"/>
-          <add name="SiteMap" duration="1800" varyByParam="none"/>
-          <add name="None" duration="0" noStore="true" varyByParam="none"/>
+          <add name="Long" duration="3600" varyByParam="none" />
+          <add name="Short" duration="10" varyByParam="none" />
+          <add name="Data" duration="600" varyByParam="none" />
+          <add name="SiteMap" duration="1800" varyByParam="none" />
+          <add name="None" duration="0" noStore="true" varyByParam="none" />
         </outputCacheProfiles>
       </outputCacheSettings>
     </caching>
     <customErrors mode="RemoteOnly" redirectMode="ResponseRewrite">
-      <error statusCode="404" redirect="~/404.aspx"/>
-      <error statusCode="403" redirect="~/403.aspx"/>
-      <error statusCode="500" redirect="~/500.aspx"/>
+      <error statusCode="404" redirect="~/404.aspx" />
+      <error statusCode="403" redirect="~/403.aspx" />
+      <error statusCode="500" redirect="~/500.aspx" />
     </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
+        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
+        <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed"/>
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0"/>
+        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234"/>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
+        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0"/>
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0"/>
+        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0"/>
+        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.webServer>
     <httpCompression>
       <staticTypes>
-        <add mimeType="text/javascript" enabled="true"/>
-        <add mimeType="text/css" enabled="true"/>
+        <add mimeType="text/javascript" enabled="true" />
+        <add mimeType="text/css" enabled="true" />
       </staticTypes>
     </httpCompression>
-    <urlCompression doStaticCompression="true" doDynamicCompression="true"/>
+    <urlCompression doStaticCompression="true" doDynamicCompression="true" />
     <staticContent>
-      <remove fileExtension=".woff"/>
-      <mimeMap fileExtension=".woff" mimeType="application/font-woff"/>
-      <remove fileExtension=".svg"/>
-      <mimeMap fileExtension=".svg" mimeType="image/svg+xml"/>
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <remove fileExtension=".svg" />
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
     </staticContent>
     <httpProtocol>
       <customHeaders>
-        <remove name="X-Powered-By"/>
-        <remove name="X-AspNetMvc-Version"/>
-        <add name="Cache-Control" value="public"/>
+        <remove name="X-Powered-By" />
+        <remove name="X-AspNetMvc-Version" />
+        <add name="Cache-Control" value="public" />
         <!--Securing against "Click Jacking" http://stackoverflow.com/questions/20047086/securing-my-asp-net-mvc3-website-aganist-click-jacking-->
-        <add name="x-frame-options" value="SAMEORIGIN"/>
+        <add name="x-frame-options" value="SAMEORIGIN" />
         <!--HSTS header for GDS https://www.gov.uk/service-manual/operations/operating-servicegovuk-subdomains#transport-layer-security-->
-        <add name="Strict-Transport-Security" value="max-age=31536000, includeSubDomains;"/>
+        <add name="Strict-Transport-Security" value="max-age=31536000, includeSubDomains;" />
       </customHeaders>
     </httpProtocol>
     <httpErrors errorMode="Detailed" existingResponse="Replace">
-      <remove statusCode="410"/>
-      <error statusCode="410" subStatusCode="1" path="VacancyNotFound.html" responseMode="File"/>
-      <remove statusCode="404"/>
-      <error statusCode="404" path="404.html" responseMode="File"/>
-      <remove statusCode="403"/>
-      <error statusCode="403" path="403.html" responseMode="File"/>
-      <remove statusCode="500"/>
-      <error statusCode="500" path="500.html" responseMode="File"/>
+      <remove statusCode="410" />
+      <error statusCode="410" subStatusCode="1" path="VacancyNotFound.html" responseMode="File" />
+      <remove statusCode="404" />
+      <error statusCode="404" path="404.html" responseMode="File" />
+      <remove statusCode="403" />
+      <error statusCode="403" path="403.html" responseMode="File" />
+      <remove statusCode="500" />
+      <error statusCode="500" path="500.html" responseMode="File" />
     </httpErrors>
-    <directoryBrowse enabled="false"/>
+    <directoryBrowse enabled="false" />
     <modules runAllManagedModulesForAllRequests="true">
-      <add name="RemoveETag" type="SFA.Apprenticeships.Web.Common.Modules.RemoveETagModule, SFA.Apprenticeships.Web.Common"/>
+      <add name="RemoveETag" type="SFA.Apprenticeships.Web.Common.Modules.RemoveETagModule, SFA.Apprenticeships.Web.Common" />
     </modules>
     <!--<security>
       <ipSecurity allowUnlisted="false">
@@ -170,43 +174,43 @@
     <!--
       </ipSecurity>
     </security>-->
-    <validation validateIntegratedModeConfiguration="false"/>
+    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
-      <remove name="OPTIONSVerbHandler"/>
-      <remove name="TRACEVerbHandler"/>
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
   <nlog throwExceptions="true" autoReload="true" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <extensions>
-      <add assembly="SFA.Apprenticeships.Infrastructure.Logging"/>
+      <add assembly="SFA.Apprenticeships.Infrastructure.Logging" />
     </extensions>
-    <variable name="environment" value="Local"/>
+    <variable name="environment" value="Local" />
     <targets async="true">
       <target xsi:type="File" name="flatfilelogger" fileName="C:\logs\Web.Recruit.log" createDirs="true" keepFileOpen="false" encoding="iso-8859-2">
         <layout xsi:type="JsonLayout">
-          <property name="user" layout="${mdlc:userId}"/>
-          <property name="session" layout="${mdlc:sessionId}"/>
-          <property name="date" layout="${longdate}"/>
-          <property name="level" layout="${level:upperCase=true}"/>
-          <property name="logger" layout="${logger}"/>
-          <property name="message" layout="${message}"/>
-          <property name="exception" layout="${onexception:${exception:format=tostring}}"/>
-          <property name="errordata" layout="${onexception:${exception:format=data}}"/>
-          <property name="errorcode" layout="${event-context:item=ErrorCode}"/>
-          <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}"/>
-          <property name="ticks" layout="${ticks}"/>
-          <property name="processid" layout="${processid}"/>
-          <property name="useragent" layout="${mdlc:UserAgent}"/>
-          <property name="referrer" layout="${mdlc:UrlReferrer}"/>
-          <property name="userlanguages" layout="${mdlc:UserLanguages}"/>
-          <property name="headers" layout="${mdlc:Headers}"/>
+          <property name="user" layout="${mdlc:userId}" />
+          <property name="session" layout="${mdlc:sessionId}" />
+          <property name="date" layout="${longdate}" />
+          <property name="level" layout="${level:upperCase=true}" />
+          <property name="logger" layout="${logger}" />
+          <property name="message" layout="${message}" />
+          <property name="exception" layout="${onexception:${exception:format=tostring}}" />
+          <property name="errordata" layout="${onexception:${exception:format=data}}" />
+          <property name="errorcode" layout="${event-context:item=ErrorCode}" />
+          <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}" />
+          <property name="ticks" layout="${ticks}" />
+          <property name="processid" layout="${processid}" />
+          <property name="useragent" layout="${mdlc:UserAgent}" />
+          <property name="referrer" layout="${mdlc:UrlReferrer}" />
+          <property name="userlanguages" layout="${mdlc:UserLanguages}" />
+          <property name="headers" layout="${mdlc:Headers}" />
         </layout>
       </target>
     </targets>
     <rules>
-      <logger name="*" minlevel="Debug" writeTo="flatfilelogger"/>
+      <logger name="*" minlevel="Debug" writeTo="flatfilelogger" />
     </rules>
   </nlog>
 </configuration>
