--- a/src/SFA.Apprenticeships.Web.Recruit/packages.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="FluentValidation" version="5.6.2.0" targetFramework="net452" />
   <package id="FluentValidation.MVC5" version="5.6.2.0" targetFramework="net452" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
